--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ playServicesMaps = "18.1.0"
 constraintlayout = "2.1.4"
 playServicesLocation = "21.3.0"
 testng = "6.9.6"
+material = "1.12.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -75,6 +76,7 @@ play-services-maps = { group = "com.google.android.gms", name = "play-services-m
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 testng = { group = "org.testng", name = "testng", version.ref = "testng" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 
 
